# DileptonEmission

./: .gitignore  CMakeLists.txt  GNUmakefile  README.md  compile.sh  download_all_centralities_jobs.sh  download_all_energies_jobs.sh  generate_and_submit_all_centralities_jobs.sh  generate_jobs.py  hdf5_zip_results.py  parameters_dict_user.py  runCPU.sh  submit_job_beluga.pbs  submit_job_osc.pbs
config/: parameters_dict_master.py
src/: Arsenal.cpp  Arsenal.h  CMakeLists.txt  GNUmakefile  HadronGasPiRhoOmega.h  HadronGasPipiBremsstrahlung.cpp  Hydroinfo.cpp  Hydroinfo.h  Hydroinfo_MUSIC.cpp  Hydroinfo_MUSIC.h  Hydroinfo_MUSIC_photon.cpp  Hydroinfo_MUSIC_photon.h  Hydroinfo_h5.cpp  Hydroinfo_h5_dilepton.cpp  Hydroinfo_h5_dilepton.h  Hydroinfo_h5_photon.cpp  Hydroinfo_h5_photon.h  JS_dilepton.cpp  JS_dilepton.h  JS_photon.cpp  JS_photon.h  ParameterReader.cpp  ParameterReader.h  PhotonEmission.cpp  PhotonEmission.h  QGP2to2Total.cpp  QGPAMYCollinear.cpp  QGP_LO.cpp  QGP_LO.h  QGP_LO_analytic.cpp  QGP_LO_analytic.h  QGP_NLO.cpp  QGP_NLO.h  Stopwatch.h  Table2D.cpp  Table2D.h  ThermalPhoton.cpp  ThermalPhoton.h  data_struct.h  gauss_quadrature.cpp  (+4 more)
src/src/: Arsenal.cpp  Arsenal.h  HadronGasPiRhoOmega.cpp  HadronGasPipiBremsstrahlung.h  HadronGasRhoSpectralFunction.cpp  HadronGasRhoSpectralFunction.h  Hydroinfo_MUSIC.h  Hydroinfo_h5.cpp  Hydroinfo_h5.h  JS_photon.h  QGP2to2Total.h  QGPAMYCollinear.h  ThermalPhoton.cpp  ThermalPhoton.h  gauss_quadrature.h  main.cpp  tensor_trans.cpp  tensor_trans.h
